# Hangman_the_Game

./: CMakeLists.txt
Source/: main.cpp
Source/Includes/Constants/: Constants.hpp
Source/Includes/DataBase/: DataBase.hpp
Source/Includes/Hangman/: Hangman.hpp
Source/Includes/Helper/: Helper.hpp
Source/Includes/InputOutput/: InputOutput.hpp
Source/Includes/Validation/: Validation.hpp
Source/Private/Hangman/: Hangman.cpp
Source/Private/Helper/: Helper.cpp
Source/Private/InputOutput/: InputOutput.cpp
Source/Private/Validation/: Validation.cpp
Testing/: Defines.hpp  main.cpp
